force-app/main/default/objects/Product_Economy__c/fields/Inflation_Percent__c.field-meta.xml
<CustomField>
    <fullName>Inflation_Percent__c</fullName>
    <label>Inflation %</label>
    <type>Percent</type>
    <precision>6</precision>
    <scale>2</scale>
    <formula>IF(Base_Price__c > 0, (Price__c - Base_Price__c) / Base_Price__c, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>