force-app/main/default/objects/Product_Economy__c/fields/Max_Demand__c.field-meta.xml
<CustomField>
    <fullName>Max_Demand__c</fullName>
    <label>Max Demand</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>