force-app/main/default/objects/Product_Economy__c/fields/Overproduction_Percent__c.field-meta.xml
<CustomField>
    <fullName>Overproduction_Percent__c</fullName>
    <label>Overproduction %</label>
    <type>Percent</type>
    <precision>6</precision>
    <scale>2</scale>
    <formula>IF(Real_Demand__c > 0, (Total_World_Supply__c / Real_Demand__c) * 100, 0.0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>