force-app/main/default/objects/Product_Economy__c/fields/Real_Demand__c.field-meta.xml
<CustomField>
    <fullName>Real_Demand__c</fullName>
    <label>Real Demand</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
</CustomField>